--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "README.md"
   ],
   "dependencies": {
-    "css-to-react-native-transform": "^1.8.1",
+    "css-to-react-native-transform": "git+https://github.com/5468sun/css-to-react-native-transform.git",
     "postcss-load-config": "^2.0.0",
     "semver": "^5.6.0"
   },
